--- a/ztrhtlxc.manus.space/index.html
+++ b/ztrhtlxc.manus.space/index.html
@@ -411,6 +411,18 @@
                 margin: 10px 0;
                 font-size: 24px;
             }
+		.grid-cols-1.md\:grid-cols-3.gap-12 {
+               grid-template-columns: 1fr 1fr;
+               max-width: 1400px;
+               margin: 0 auto;
+               gap: 2rem;
+            }
+
+               .universe-card {
+               width: 100%;
+               max-width: none;
+            }
+
         }
     </style>
 </head>
