--- a/ztrhtlxc.manus.space/index.html
+++ b/ztrhtlxc.manus.space/index.html
@@ -547,6 +547,31 @@
                     <!-- Music Player -->
                     <div class="mb-6 bg-gray-900 rounded-lg p-4">
                         <h4 class="text-xl font-semibold mb-3">Listen to Our Music</h4>
+			    <section class="custom-music-service" style="padding: 4rem 2rem; background: linear-gradient(to bottom, #0a001a, #100026); color: white; text-align: center; margin-top: 2rem; border-radius: 1rem;">
+                    <h2 style="font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem;">✦ Commission Your Own Song</h2>
+                    <p style="font-size: 1.25rem; max-width: 800px; margin: 0 auto 2.5rem;">
+                       Whether it's a heartfelt anniversary gift, a birthday surprise, a custom love song, or a theme for a special event — Violet Media crafts <strong>one-of-a-kind tracks</strong> using advanced AI tools. Every song is uniquely written with custom lyrics and delivered in <strong>high-quality studio WAV format</strong>.
+                    </p>
+
+                    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; margin-bottom: 3rem;">
+                    <div style="flex: 1 1 250px; max-width: 300px; background: rgba(255,255,255,0.05); padding: 1.5rem; border-radius: 1rem;">
+                    <h3 style="font-size: 1.25rem; font-weight: bold;">Occasions</h3>
+                    <p style="margin-top: 0.5rem;">Birthdays, anniversaries, weddings, proposals, holidays, memorials, or just because.</p>
+                    </div>
+                    <div style="flex: 1 1 250px; max-width: 300px; background: rgba(255,255,255,0.05); padding: 1.5rem; border-radius: 1rem;">
+                    <h3 style="font-size: 1.25rem; font-weight: bold;">What You Get</h3>
+                    <p style="margin-top: 0.5rem;">Custom lyrics, studio-quality mastering, full WAV + MP3 formats, and optional lyric videos.</p>
+                    </div>
+                    <div style="flex: 1 1 250px; max-width: 300px; background: rgba(255,255,255,0.05); padding: 1.5rem; border-radius: 1rem;">
+                    <h3 style="font-size: 1.25rem; font-weight: bold;">Powered by AI</h3>
+                    <p style="margin-top: 0.5rem;">Crafted with Suno AI, mixed with precision, and optionally voiced using ElevenLabs AI.</p>
+                   </div>
+                   </div>
+
+                   <a href="#contact" style="display: inline-block; padding: 0.75rem 2rem; background: #9b5de5; color: white; border-radius: 0.5rem; font-weight: bold; text-decoration: none; transition: background 0.3s;">
+                   ✉️ Contact Us to Start Your Song
+                  </a>
+                  </section>
                         <iframe width="100%" height="315" src="https://www.youtube.com/embed/9W1qhin0fyg" title="Soulful Vibe - Violet Media" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     
