--- a/ztrhtlxc.manus.space/index.html
+++ b/ztrhtlxc.manus.space/index.html
@@ -735,8 +735,7 @@
                         At Violet Media, we don't just <em>use</em> AI—we co-create with it.
                     </p>
                     <p class="text-lg mb-6">
-                        We've integrated Suno AI for song generation, ElevenLabs for lifelike voice synthesis, OpenArt's Kling 1.6 for video animation, and collaborate with Manus, Genspark, ChatGPT, Claude AI, Grok, and Openart.ai. These aren't just tools. They are collaborators.
-                    </p>
+                        We've integrated Suno AI for song generation, ElevenLabs for lifelike voice synthesis, OpenArt's Kling 1.6 for video animation, and collaborate with Genspark, ChatGPT, Claude AI, Grok, and Openart.ai.
                     <p class="text-lg">
                         Every animation is prompt-precise. Every voiceover is soul-infused. Every frame is a labor of style.
                     </p>
@@ -755,7 +754,6 @@
                         </div>
                         <div class="flex flex-col items-center text-center p-6 bg-gray-800/50 rounded-lg">
                             <i class="fas fa-robot text-4xl text-violet-300 mb-4"></i>
-                            <h3 class="text-xl font-semibold mb-2">Manus</h3>
                             <p class="text-sm text-gray-400">AI agent for creative assistance</p>
                         </div>
                         <div class="flex flex-col items-center text-center p-6 bg-gray-800/50 rounded-lg">
@@ -1092,8 +1090,7 @@
             wrapper.setAttribute('class', 'wrapper');
             // 添加一些内容到组件中
             wrapper.innerHTML = `
-                <div class="page-footer">
-                    <div class="tooltip-dialog">Not an official Manus website nor endorsed by Manus. Content may contain inaccuracies; double-check before use. Do not submit passwords, credit cards, or personal information.</div>
+                <div class="page-footer"
                     <div class="footer-close-btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
                         <g clip-path="url(#clip0_5850_97234)">
@@ -1132,7 +1129,6 @@
                             </span>
                         </div>
                     </div>
-                    <a href="https://manus.im/invitation?from=space" target="_blank" class="footer-button">
                         <span class="footer-logo">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
                                 <path
@@ -1172,7 +1168,6 @@
                                 />
                             </svg>
                         </span>
-                        <div class="title">Made with Manus</div>
                         <div class="create-title">Create my website</div>
                     </a>
                 </div>
@@ -1216,13 +1211,11 @@
                                 fill="white"
                             />
                         </svg>
-                        <div class="title">Made with Manus</div>
                         <div class="create-title">Create my website</div>
                     </div>
                     <div class="footer-dialog">
                         <div class="dialog-box">
                             <div class="dialog-header">
-                                <div class="dialog-header-title">Made with Manus</div>
                                 <span class="dialog-header-icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
                                         <path
@@ -1237,7 +1230,6 @@
                             <div class="dialog-body">
                                 <div>This user-generated website was created with AI. Use with caution.</div>
                                 <div>
-                                    Not an official Manus website nor endorsed by Manus. Content may contain inaccuracies; double-check before use. Do not submit
                                     passwords, credit cards, or personal information.
                                 </div>
                             </div>
@@ -1572,7 +1564,6 @@
             };
 
             const createSite = () => {
-                window.open('https://manus.im/invitation?from=space', '_blank');
                 changeDialogStyle('none');
             };
 
@@ -1626,7 +1617,6 @@
 </script>
 <script
 			defer
-			data-domain="manus.space"
 			src="../plausible.io/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"
 		></script>
 		<script>
