--- a/ztrhtlxc.manus.space/index.html
+++ b/ztrhtlxc.manus.space/index.html
@@ -870,7 +870,7 @@
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="md:w-2/5 mb-10 md:mb-0 flex justify-center" data-aos="fade-right">
                         <div class="w-64 h-64 rounded-full overflow-hidden border-4 border-violet-600">
-                            <img src="https://cdn.jsdelivr.net/gh/petersarosi/website-assets@main/peter-profile.jpg" alt="Peter Z Sarosi" class="w-full h-full object-cover">
+                            <img src="https://cdn.jsdelivr.net/gh/Schwarcz23/violetmedia@main/cofounder.png" alt="Peter Z Sarosi" class="w-full h-full object-cover">
                         </div>
                     </div>
                     <div class="md:w-3/5 md:pl-12" data-aos="fade-left">
