--- a/ztrhtlxc.manus.space/index.html
+++ b/ztrhtlxc.manus.space/index.html
@@ -410,19 +410,34 @@
                 font-size: 24px;
             }
         }
-        
-        .grid-cols-1.md\:grid-cols-3.gap-12 {
-            grid-template-columns: 1fr 1fr;
-            max-width: 1400px;
-            margin: 0 auto;
-            gap: 2rem;
-        }
+ 
+.grid-cols-1.md\:grid-cols-2.gap-12 {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Makes both columns exactly equal width */
+  max-width: 1400px;
+  margin: 0 auto;
+  gap: 2rem;
+}
 
-        .universe-card {
-            width: 100%;
-            max-width: none;
-        }
-        
+.universe-card {
+  width: 100%;
+  height: 100%; /* Ensures equal height */
+  display: flex;
+  flex-direction: column;
+}
+
+/* Make embedded content maintain aspect ratio */
+.universe-card iframe {
+  aspect-ratio: 16/9;
+  width: 100%;
+  max-height: 250px; /* Control the height of video players */
+}
+
+/* Ensure content areas have equal padding */
+.universe-card > div {
+  padding: 1.5rem;
+}
+
         .song-craft-section {
             margin-top: 2rem;
             padding: 2rem;
