--- a/ztrhtlxc.manus.space/index.html
+++ b/ztrhtlxc.manus.space/index.html
@@ -997,8 +997,10 @@
                 This is your future. This is Violet Media.
             </p>
             <div class="max-w-md mx-auto">
-                <a href="#contact" class="block w-full py-4 px-8 bg-violet-gradient text-white text-xl font-bold rounded-full transition-all duration-300 transform hover:scale-105 hover:shadow-lg" data-aos="fade-up" data-aos-delay="300">
-                    Connect With Us
+                <a href="mailto:violetmediastudio@gmail.com" class="block w-full py-4 px-8 bg-violet-gradient text-white text-xl font-bold rounded-full transition-all duration-300 transform hover:scale-105 hover:shadow-lg" data-aos="fade-up" data-aos-delay="300">
+    Connect With Us
+</a>
+
                 </a>
             </div>
         </div>
@@ -1018,7 +1020,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
                     <div>
                         <h3 class="text-lg font-bold mb-4 text-violet-300">Contact</h3>
-                        <p class="text-gray-400 mb-2"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="6f190600030a1b020a0b060e1c1b1a0b06002f08020e0603410c0002">[email&#160;protected]</a></p>
+                        <p class="text-gray-400 mb-2"><a href="mailto:violetmediastudio@gmail.com">violetmediastudio@gmail.com</a></p>
                         <p class="text-gray-400">+61 0405 231 326</p>
                     </div>
                     
