--- a/ztrhtlxc.manus.space/index.html
+++ b/ztrhtlxc.manus.space/index.html
@@ -1016,7 +1016,12 @@
                     </a>
                     <p class="mt-2 text-gray-400">The Frequency of Creation</p>
                 </div>
-                
+                 <div class="footer-family">
+      <h3>The Violet Media Family</h3>
+      <a href="https://www.violetmedia.org" class="family-link">Violet Media</a>
+      <a href="https://ai.violetmedia.org" class="family-link">Violet AI</a>
+      <a href="https://music.violetmedia.org" class="family-link">Violet Music</a>
+    </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
                     <div>
                         <h3 class="text-lg font-bold mb-4 text-violet-300">Contact</h3>
