--- a/index.html
+++ b/index.html
@@ -648,8 +648,8 @@
     <!-- Footer -->
     <footer class="py-12 text-center relative overflow-hidden">
         <div class="container mx-auto px-6 relative z-10">
-            <p class="text-lg cosmic-text font-bold mb-4">This is your future. This is Violet Media.</p>
-            <p class="text-sm opacity-60">© 2024 Violet Media. All rights reserved.</p>
+            <p class="text-lg cosmic-text font-bold mb-4">Quality is for the ages. This is Violet Media.</p>
+            <p class="text-sm opacity-60">© 2025 Violet Media. All rights reserved.</p>
         </div>
     </footer>
 
