--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
     <a href="https://www.tiktok.com/@cosmictease" target="_blank" class="platform-icon hover:text-pink-400">
     <i class="fab fa-tiktok"></i>
     </a>
-    <a href="https://youtube.com/@cosmictease-y6g" target="_blank" class="platform-icon hover:text-red-400">
+    <a href="https://youtube.com/@cosmic_tease" target="_blank" class="platform-icon hover:text-red-400">
     <i class="fab fa-youtube"></i>
     </a>
     </div>
@@ -1054,3 +1054,4 @@
     </script>
 </body>
 </html>
+
