--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
     <i class="fab fa-tiktok text-3xl mb-2 text-pink-400"></i>
     <div class="font-medium improved-readability text-sm">TikTok</div>
     </a>
-    <a href="https://youtube.com/@cosmictease-y6g" target="_blank" class="platform-card streaming-platform text-center hover:bg-red-500 hover:bg-opacity-20">
+    <a href="https://youtube.com/@cosmic_tease" target="_blank" class="platform-card streaming-platform text-center hover:bg-red-500 hover:bg-opacity-20">
     <i class="fab fa-youtube text-3xl mb-2 text-red-400"></i>
     <div class="font-medium improved-readability text-sm">YouTube</div>
     </a>
@@ -774,7 +774,7 @@
     <a href="https://www.tiktok.com/@cosmictease" target="_blank" class="platform-icon hover:text-pink-400">
     <i class="fab fa-tiktok"></i>
     </a>
-    <a href="https://youtube.com/@cosmictease-y6g" target="_blank" class="platform-icon hover:text-red-400">
+    <a href="https://youtube.com/@cosmic_tease" target="_blank" class="platform-icon hover:text-red-400">
     <i class="fab fa-youtube"></i>
     </a>
     <a href="https://open.spotify.com/artist/6d1NDbxwj89zRTJ8lUp63g" target="_blank" class="platform-icon hover:text-green-400">
@@ -1054,4 +1054,5 @@
     </script>
 </body>
 </html>
+
 
