--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
             <!-- Empire Metrics -->
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-4xl mx-auto mb-16 reveal" style="transition-delay: 300ms;">
                 <div class="glass-card p-8 rounded-2xl">
-                    <div class="text-4xl font-bold text-white mb-2 font-display">12M+</div>
+                    <div class="text-4xl font-bold text-white mb-2 font-display">13M+</div>
                     <div class="text-purple-300 font-medium">Total Views</div>
                 </div>
                 <div class="glass-card p-8 rounded-2xl">
-                    <div class="text-4xl font-bold text-white mb-2 font-display">547K+</div>
+                    <div class="text-4xl font-bold text-white mb-2 font-display">603K+</div>
                     <div class="text-purple-300 font-medium">Likes</div>
                 </div>
                 <div class="glass-card p-8 rounded-2xl">
@@ -205,7 +205,7 @@
         <div class="container mx-auto px-6">
             <div class="text-center mb-20 reveal">
                 <h2 class="text-5xl font-display font-bold mb-4 cosmic-text">COSMIC TEASE</h2>
-                <p class="text-xl text-gray-400">The Entertainment Empire • 12M+ Views</p>
+                <p class="text-xl text-gray-400">The Entertainment Empire • 13M+ Views</p>
                 <div class="flex justify-center space-x-6 mt-6">
                     <a href="https://www.tiktok.com/@cosmictease" target="_blank" class="text-3xl text-gray-400 hover:text-pink-500 transition-colors"><i class="fab fa-tiktok"></i></a>
                     <a href="https://youtube.com/@cosmic_tease" target="_blank" class="text-3xl text-gray-400 hover:text-red-500 transition-colors"><i class="fab fa-youtube"></i></a>
@@ -218,7 +218,7 @@
                 <div class="glass-card rounded-2xl p-6 reveal">
                     <div class="flex justify-between items-start mb-4">
                         <h4 class="text-xl font-bold font-display">Veiled Echoes</h4>
-                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">550K Views</span>
+                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">558K Views</span>
                     </div>
                     <a href="https://vt.tiktok.com/ZSBGH6Dk3/" target="_blank" class="block w-full py-3 mt-4 text-center rounded-lg border border-purple-500/30 hover:bg-purple-500/20 transition-all text-sm font-bold text-purple-300">
                         Watch Now <i class="fas fa-play ml-2"></i>
@@ -229,7 +229,7 @@
                 <div class="glass-card rounded-2xl p-6 reveal" style="transition-delay: 100ms;">
                     <div class="flex justify-between items-start mb-4">
                         <h4 class="text-xl font-bold font-display">Violet Echo</h4>
-                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">400K Views</span>
+                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">420K Views</span>
                     </div>
                     <a href="https://vt.tiktok.com/ZSBGHDANH/" target="_blank" class="block w-full py-3 mt-4 text-center rounded-lg border border-purple-500/30 hover:bg-purple-500/20 transition-all text-sm font-bold text-purple-300">
                         Watch Now <i class="fas fa-play ml-2"></i>
@@ -240,7 +240,7 @@
                 <div class="glass-card rounded-2xl p-6 reveal" style="transition-delay: 200ms;">
                     <div class="flex justify-between items-start mb-4">
                         <h4 class="text-xl font-bold font-display">Cosmic Tease Yacht</h4>
-                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">322K Views</span>
+                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">377K Views</span>
                     </div>
                     <a href="https://vt.tiktok.com/ZSBGxDGUE/" target="_blank" class="block w-full py-3 mt-4 text-center rounded-lg border border-purple-500/30 hover:bg-purple-500/20 transition-all text-sm font-bold text-purple-300">
                         Watch Now <i class="fas fa-play ml-2"></i>
@@ -251,7 +251,7 @@
                 <div class="glass-card rounded-2xl p-6 reveal">
                     <div class="flex justify-between items-start mb-4">
                         <h4 class="text-xl font-bold font-display">Cosmic Real Estate</h4>
-                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">242K Views</span>
+                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">697K Views</span>
                     </div>
                     <a href="https://vt.tiktok.com/ZSBG9pBVq/" target="_blank" class="block w-full py-3 mt-4 text-center rounded-lg border border-purple-500/30 hover:bg-purple-500/20 transition-all text-sm font-bold text-purple-300">
                         Watch Now <i class="fas fa-play ml-2"></i>
@@ -262,7 +262,7 @@
                 <div class="glass-card rounded-2xl p-6 reveal" style="transition-delay: 100ms;">
                     <div class="flex justify-between items-start mb-4">
                         <h4 class="text-xl font-bold font-display">Stars Ain't Far</h4>
-                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">133K Views</span>
+                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">146K Views</span>
                     </div>
                     <a href="https://vt.tiktok.com/ZSBGxjh44/" target="_blank" class="block w-full py-3 mt-4 text-center rounded-lg border border-purple-500/30 hover:bg-purple-500/20 transition-all text-sm font-bold text-purple-300">
                         Watch Now <i class="fas fa-play ml-2"></i>
@@ -273,7 +273,7 @@
                 <div class="glass-card rounded-2xl p-6 reveal" style="transition-delay: 200ms;">
                     <div class="flex justify-between items-start mb-4">
                         <h4 class="text-xl font-bold font-display">Celestial Echoes</h4>
-                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">59K Views</span>
+                        <span class="bg-purple-500/20 text-purple-300 px-3 py-1 rounded-full text-xs font-bold">61K Views</span>
                     </div>
                     <div class="text-xs text-gray-500 mb-4">Creator's Favorite</div>
                     <a href="https://vt.tiktok.com/ZSBGxk7ag/" target="_blank" class="block w-full py-3 mt-4 text-center rounded-lg border border-purple-500/30 hover:bg-purple-500/20 transition-all text-sm font-bold text-purple-300">
@@ -302,7 +302,7 @@
                     <i class="fab fa-youtube text-3xl mb-3 text-red-500 group-hover:scale-110 transition-transform"></i>
                     <span class="text-sm font-medium">YT Music</span>
                 </a>
-                <a href="#" class="glass-card p-6 flex flex-col items-center justify-center hover:bg-pink-500/10 transition-colors group">
+                <a href="https://music.apple.com/us/artist/violet-media/1803005671" class="glass-card p-6 flex flex-col items-center justify-center hover:bg-pink-500/10 transition-colors group">
                     <i class="fab fa-apple text-3xl mb-3 text-pink-400 group-hover:scale-110 transition-transform"></i>
                     <span class="text-sm font-medium">Apple Music</span>
                 </a>
@@ -374,7 +374,7 @@
                 <!-- Tool 6 -->
                 <div class="glass-card p-8 rounded-2xl text-center reveal" style="transition-delay: 200ms;">
                     <i class="fas fa-chart-line text-4xl text-orange-400 mb-4"></i>
-                    <h3 class="text-xl font-bold mb-3">Abacus AI</h3>
+                    <h3 class="text-xl font-bold mb-3">Gemini Ai</h3>
                     <p class="text-gray-400 text-sm leading-relaxed">Advanced analytics and machine learning for content optimization</p>
                 </div>
             </div>
@@ -554,3 +554,4 @@
     </script>
 </body>
 </html>
+
