Update html file

--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
             <p class="text-base md:text-lg text-white/70 mb-8 leading-relaxed">
               Big thanks to WaveSpeed AI for supporting this cosmic journey. Together, we’re pushing the boundaries of what’s possible in creative content generation.
             </p>
-            <a href="https://wavespeed.ai/?utm_source=creator_cosmictease" target="_blank" rel="noopener noreferrer" class="btn-cosmic">
+            <a href="https://wavespeedai.pxf.io/2ab4RG" target="_blank" rel="noopener noreferrer" class="btn-cosmic">
               Explore WaveSpeed AI <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </a>
           </div>
@@ -980,3 +980,4 @@
   </script>
 </body>
 </html>
+
