Update fmt.Println output from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -336,33 +336,51 @@
           Where vision meets vibration. Where art, AI, and human spirit coalesce to create content that lasts.
         </p>
 
-        <!-- ── UPDATED METRICS: 14M+ ── -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-5 max-w-5xl mx-auto mb-10 reveal" style="transition-delay: 280ms;">
-          <div class="glass-card p-7 rounded-2xl text-left">
-            <div class="flex items-center justify-between mb-4">
+        <!-- ── REAL TIKTOK STUDIO METRICS ── -->
+        <div class="grid grid-cols-2 md:grid-cols-5 gap-4 max-w-5xl mx-auto mb-10 reveal" style="transition-delay: 280ms;">
+          <div class="glass-card p-6 rounded-2xl text-left">
+            <div class="flex items-center justify-between mb-3">
               <div class="text-xs tracking-[0.18em] uppercase text-white/50">Reach</div>
               <i class="fa-solid fa-wand-magic-sparkles text-purple-300/80"></i>
             </div>
-            <div class="text-4xl font-black text-white font-display">14M+</div>
-            <div class="text-purple-200/80 font-semibold mt-1">Total Views</div>
+            <div class="text-3xl font-black text-white font-display">14M+</div>
+            <div class="text-purple-200/80 font-semibold mt-1 text-sm">Total Views</div>
           </div>
 
-          <div class="glass-card p-7 rounded-2xl text-left">
-            <div class="flex items-center justify-between mb-4">
+          <div class="glass-card p-6 rounded-2xl text-left">
+            <div class="flex items-center justify-between mb-3">
               <div class="text-xs tracking-[0.18em] uppercase text-white/50">Engagement</div>
               <i class="fa-solid fa-heart text-pink-300/80"></i>
             </div>
-            <div class="text-4xl font-black text-white font-display">603K+</div>
-            <div class="text-purple-200/80 font-semibold mt-1">Likes</div>
+            <div class="text-3xl font-black text-white font-display">718K+</div>
+            <div class="text-purple-200/80 font-semibold mt-1 text-sm">Likes</div>
           </div>
 
-          <div class="glass-card p-7 rounded-2xl text-left">
-            <div class="flex items-center justify-between mb-4">
+          <div class="glass-card p-6 rounded-2xl text-left">
+            <div class="flex items-center justify-between mb-3">
+              <div class="text-xs tracking-[0.18em] uppercase text-white/50">Shares</div>
+              <i class="fa-solid fa-share-nodes text-cyan-300/80"></i>
+            </div>
+            <div class="text-3xl font-black text-white font-display">10K+</div>
+            <div class="text-purple-200/80 font-semibold mt-1 text-sm">Shares</div>
+          </div>
+
+          <div class="glass-card p-6 rounded-2xl text-left">
+            <div class="flex items-center justify-between mb-3">
+              <div class="text-xs tracking-[0.18em] uppercase text-white/50">Community</div>
+              <i class="fa-solid fa-comments text-yellow-300/80"></i>
+            </div>
+            <div class="text-3xl font-black text-white font-display">2.8K+</div>
+            <div class="text-purple-200/80 font-semibold mt-1 text-sm">Comments</div>
+          </div>
+
+          <div class="glass-card p-6 rounded-2xl text-left">
+            <div class="flex items-center justify-between mb-3">
               <div class="text-xs tracking-[0.18em] uppercase text-white/50">Discovery</div>
               <i class="fa-solid fa-eye text-cyan-200/80"></i>
             </div>
-            <div class="text-4xl font-black text-white font-display">40K+</div>
-            <div class="text-purple-200/80 font-semibold mt-1">Profile Views</div>
+            <div class="text-3xl font-black text-white font-display">45K+</div>
+            <div class="text-purple-200/80 font-semibold mt-1 text-sm">Profile Views</div>
           </div>
         </div>
 
@@ -373,6 +391,14 @@
           <a href="#contact" class="btn-ghost">
             Contact Violet Media <i class="fa-solid fa-paper-plane"></i>
           </a>
+        </div>
+
+        <!-- FYP Badge -->
+        <div class="mt-5 reveal" style="transition-delay: 420ms;">
+          <div class="inline-flex items-center gap-2 glass-card rounded-full px-5 py-2 text-xs font-bold text-white/75">
+            <span class="w-2 h-2 rounded-full bg-green-400" style="box-shadow: 0 0 10px rgba(74,222,128,0.7);"></span>
+            98.5% For You Page Traffic — The Algorithm Agrees
+          </div>
         </div>
 
         <div class="mt-14 grid grid-cols-1 md:grid-cols-3 gap-4 max-w-5xl mx-auto reveal" style="transition-delay: 460ms;">
@@ -401,7 +427,7 @@
         <div class="text-center mb-16 reveal">
           <!-- ── UPDATED: 14M+ ── -->
           <h2 class="text-4xl md:text-5xl font-display font-black mb-4 cosmic-text">COSMIC TEASE</h2>
-          <p class="text-lg text-white/60">The Entertainment Empire • 14M+ Views</p>
+          <p class="text-lg text-white/60">The Entertainment Empire • 14M Views • 718K Likes • 10K Shares</p>
           <div class="flex justify-center items-center gap-6 mt-6">
             <a href="https://www.tiktok.com/@cosmictease" target="_blank" rel="noopener noreferrer"
                class="text-3xl text-white/50 hover:text-pink-400 transition-colors" aria-label="Cosmic Tease on TikTok">
