--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="theme-color" content="#050214" />
   <title>Violet Media — Cosmic Empire</title>
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png" />
+
   <meta property="og:title" content="Violet Media — Cosmic Empire" />
   <meta property="og:description" content="Where vision meets vibration. Legendary content powered by art, AI, and human spirit." />
   <meta property="og:type" content="website" />
@@ -230,13 +233,7 @@
   <nav class="fixed top-0 w-full z-50 border-b border-white/10 bg-cosmic-900/70 backdrop-blur-md" role="banner">
     <div class="container mx-auto px-6 h-20 flex items-center justify-between">
       <a href="#top" class="flex items-center gap-3">
-        <div class="w-9 h-9 rounded-xl glass-card flex items-center justify-center" style="border-radius:14px;">
-          <span class="font-display font-black text-sm" style="color:rgba(255,255,255,0.92);">VM</span>
-        </div>
-        <div class="leading-tight">
-          <div class="text-xl md:text-2xl font-display font-black cosmic-text">Violet Media</div>
-          <div class="text-[11px] tracking-[0.18em] uppercase text-white/50">Cosmic Empire</div>
-        </div>
+        <img src="vm-logo-nav.png" alt="Violet Media" class="h-12" style="height: 48px; width: auto;" />
       </a>
 
       <div class="hidden md:flex items-center gap-8 text-sm font-semibold text-white/70">
@@ -671,9 +668,9 @@
             </div>
             <h3 class="text-xl font-black font-display mb-3">Voiceover & Avatar</h3>
             <p class="text-white/60 text-sm leading-relaxed mb-4">
-              ElevenLabs Pro voice synthesis and HeyGen Pro avatar production for podcasts, explainers, ads, and documentary narration.
+              ElevenLabs Pro voice synthesis and InfiniteTalk lipsync production for podcasts, explainers, ads, and documentary narration.
             </p>
-            <div class="text-xs text-blue-300/80 font-bold tracking-wider uppercase">ElevenLabs · HeyGen · Character Voice</div>
+            <div class="text-xs text-blue-300/80 font-bold tracking-wider uppercase">ElevenLabs · InfiniteTalk · Character Voice</div>
           </div>
 
           <div class="glass-card service-card rounded-2xl p-8 reveal" style="transition-delay: 90ms;">
@@ -736,9 +733,9 @@
 
           <div class="glass-card rounded-2xl p-8 text-center reveal" style="transition-delay: 180ms;">
             <i class="fas fa-user-astronaut text-4xl text-cyan-200 mb-4"></i>
-            <h3 class="text-xl font-black mb-2 font-display">HeyGen Pro</h3>
-            <div class="text-xs text-cyan-200/70 font-bold tracking-widest uppercase mb-3">Avatar Production</div>
-            <p class="text-white/60 text-sm leading-relaxed">Hyper-realistic AI avatar generation and lip-sync. The backbone of our talking character universe and presenter content.</p>
+            <h3 class="text-xl font-black mb-2 font-display">InfiniteTalk</h3>
+            <div class="text-xs text-cyan-200/70 font-bold tracking-widest uppercase mb-3">Lipsync & Avatar</div>
+            <p class="text-white/60 text-sm leading-relaxed">Cost-effective hyper-realistic lipsync and talking avatar generation. The backbone of our character universe and presenter content.</p>
           </div>
 
           <div class="glass-card rounded-2xl p-8 text-center reveal">
@@ -851,6 +848,9 @@
     <!-- FOOTER — UPDATED © 2026 -->
     <footer class="py-14 text-center border-t border-white/5 bg-cosmic-900/60">
       <div class="container mx-auto px-6">
+        <div class="flex justify-center mb-6">
+          <img src="vm-logo-full.png" alt="Violet Media - AI-Powered Cosmic Visuals" class="h-48" style="height: 192px; width: auto;" />
+        </div>
         <p class="text-white/45 mb-3">© 2026 Violet Media. All rights reserved.</p>
         <p class="text-xl md:text-2xl font-black cosmic-text font-display">
           Quality is for the ages. This is Violet Media.
@@ -962,4 +962,3 @@
   </script>
 </body>
 </html>
-
