--- a/index.html
+++ b/index.html
@@ -233,7 +233,13 @@
   <nav class="fixed top-0 w-full z-50 border-b border-white/10 bg-cosmic-900/70 backdrop-blur-md" role="banner">
     <div class="container mx-auto px-6 h-20 flex items-center justify-between">
       <a href="#top" class="flex items-center gap-3">
-        <img src="vm-logo-nav.png" alt="Violet Media" class="h-12" style="height: 48px; width: auto;" />
+        <div class="w-9 h-9 rounded-xl flex items-center justify-center" style="border-radius:14px; background: rgba(17, 8, 38, 0.8); border: 1px solid rgba(138,43,226,0.3);">
+          <img src="favicon.png" alt="VM" class="w-6 h-6" />
+        </div>
+        <div class="leading-tight">
+          <div class="text-xl md:text-2xl font-display font-black cosmic-text">Violet Media</div>
+          <div class="text-[11px] tracking-[0.18em] uppercase text-white/50">Cosmic Empire</div>
+        </div>
       </a>
 
       <div class="hidden md:flex items-center gap-8 text-sm font-semibold text-white/70">
@@ -848,9 +854,6 @@
     <!-- FOOTER — UPDATED © 2026 -->
     <footer class="py-14 text-center border-t border-white/5 bg-cosmic-900/60">
       <div class="container mx-auto px-6">
-        <div class="flex justify-center mb-6">
-          <img src="vm-logo-full.png" alt="Violet Media - AI-Powered Cosmic Visuals" class="h-48" style="height: 192px; width: auto;" />
-        </div>
         <p class="text-white/45 mb-3">© 2026 Violet Media. All rights reserved.</p>
         <p class="text-xl md:text-2xl font-black cosmic-text font-display">
           Quality is for the ages. This is Violet Media.
