--- a/index.html
+++ b/index.html
@@ -854,6 +854,13 @@
     <!-- FOOTER — UPDATED © 2026 -->
     <footer class="py-14 text-center border-t border-white/5 bg-cosmic-900/60">
       <div class="container mx-auto px-6">
+        <!-- Logo Lockup -->
+        <div class="flex justify-center mb-8">
+          <div class="glass-card rounded-3xl p-8" style="background: rgba(11, 5, 32, 0.85); border: 1px solid rgba(138,43,226,0.25);">
+            <img src="vm-logo-full.png" alt="Violet Media - AI-Powered Cosmic Visuals" class="h-56 mx-auto" style="height: 224px; width: auto;" />
+          </div>
+        </div>
+        
         <p class="text-white/45 mb-3">© 2026 Violet Media. All rights reserved.</p>
         <p class="text-xl md:text-2xl font-black cosmic-text font-display">
           Quality is for the ages. This is Violet Media.
