Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -856,9 +856,7 @@
       <div class="container mx-auto px-6">
         <!-- Logo Lockup -->
         <div class="flex justify-center mb-8">
-          <div class="glass-card rounded-3xl p-8" style="background: rgba(11, 5, 32, 0.85); border: 1px solid rgba(138,43,226,0.25);">
-            <img src="vm-logo-full.png" alt="Violet Media - AI-Powered Cosmic Visuals" class="h-56 mx-auto" style="height: 224px; width: auto;" />
-          </div>
+          <img src="vm-logo-horizontal-footer.jpg" alt="Violet Media - AI-Powered Cosmic Visuals" class="w-full max-w-3xl rounded-2xl" style="max-width: 768px; width: 100%; height: auto;" />
         </div>
         
         <p class="text-white/45 mb-3">© 2026 Violet Media. All rights reserved.</p>
