Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -447,20 +447,6 @@
           <div class="glass-card rounded-2xl p-7 reveal">
             <div class="flex justify-between items-start gap-4 mb-5">
               <div>
-                <h4 class="text-xl font-black font-display">Veiled Echoes</h4>
-                <div class="text-xs text-white/50 mt-1">High-retention cinematic vibe</div>
-              </div>
-              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">558K Views</span>
-            </div>
-            <a href="https://vt.tiktok.com/ZSBGH6Dk3/" target="_blank" rel="noopener noreferrer"
-               class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
-              Watch Now <i class="fas fa-play ml-2"></i>
-            </a>
-          </div>
-
-          <div class="glass-card rounded-2xl p-7 reveal" style="transition-delay: 90ms;">
-            <div class="flex justify-between items-start gap-4 mb-5">
-              <div>
                 <h4 class="text-xl font-black font-display">Violet Echo</h4>
                 <div class="text-xs text-white/50 mt-1">Signature brand energy</div>
               </div>
@@ -472,15 +458,29 @@
             </a>
           </div>
 
+          <div class="glass-card rounded-2xl p-7 reveal" style="transition-delay: 90ms;">
+            <div class="flex justify-between items-start gap-4 mb-5">
+              <div>
+                <h4 class="text-xl font-black font-display">Stellar Awakening</h4>
+                <div class="text-xs text-white/50 mt-1">Cosmic transcendence</div>
+              </div>
+              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">155K Views</span>
+            </div>
+            <a href="https://youtu.be/cNbzJaF-pb8" target="_blank" rel="noopener noreferrer"
+               class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
+              Watch Now <i class="fas fa-play ml-2"></i>
+            </a>
+          </div>
+
           <div class="glass-card rounded-2xl p-7 reveal" style="transition-delay: 180ms;">
             <div class="flex justify-between items-start gap-4 mb-5">
               <div>
-                <h4 class="text-xl font-black font-display">Cosmic Tease Yacht</h4>
-                <div class="text-xs text-white/50 mt-1">Luxury + cosmic identity</div>
+                <h4 class="text-xl font-black font-display">Neon Cosmos</h4>
+                <div class="text-xs text-white/50 mt-1">Tuned into the frequency</div>
               </div>
-              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">377K Views</span>
+              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">136K Views</span>
             </div>
-            <a href="https://vt.tiktok.com/ZSBGxDGUE/" target="_blank" rel="noopener noreferrer"
+            <a href="https://youtu.be/EHztG5vbR3A" target="_blank" rel="noopener noreferrer"
                class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
               Watch Now <i class="fas fa-play ml-2"></i>
             </a>
@@ -489,12 +489,12 @@
           <div class="glass-card rounded-2xl p-7 reveal">
             <div class="flex justify-between items-start gap-4 mb-5">
               <div>
-                <h4 class="text-xl font-black font-display">Cosmic Real Estate</h4>
-                <div class="text-xs text-white/50 mt-1">Concept + velocity</div>
+                <h4 class="text-xl font-black font-display">Climb Up</h4>
+                <div class="text-xs text-white/50 mt-1">Physical endurance + ethereal rebirth</div>
               </div>
-              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">697K Views</span>
+              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">121K Views</span>
             </div>
-            <a href="https://vt.tiktok.com/ZSBG9pBVq/" target="_blank" rel="noopener noreferrer"
+            <a href="https://youtu.be/4cVYiy0EVv4" target="_blank" rel="noopener noreferrer"
                class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
               Watch Now <i class="fas fa-play ml-2"></i>
             </a>
@@ -503,27 +503,26 @@
           <div class="glass-card rounded-2xl p-7 reveal" style="transition-delay: 90ms;">
             <div class="flex justify-between items-start gap-4 mb-5">
               <div>
-                <h4 class="text-xl font-black font-display">Stars Ain't Far</h4>
-                <div class="text-xs text-white/50 mt-1">Emotion-first hook</div>
+                <h4 class="text-xl font-black font-display">Andromeda's Whisper</h4>
+                <div class="text-xs text-white/50 mt-1">Cosmic love story</div>
               </div>
-              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">146K Views</span>
+              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">110K Views</span>
             </div>
-            <a href="https://vt.tiktok.com/ZSBGxjh44/" target="_blank" rel="noopener noreferrer"
+            <a href="https://youtu.be/Qd8wDaQ5lHg" target="_blank" rel="noopener noreferrer"
                class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
               Watch Now <i class="fas fa-play ml-2"></i>
             </a>
           </div>
 
           <div class="glass-card rounded-2xl p-7 reveal" style="transition-delay: 180ms;">
-            <div class="flex justify-between items-start gap-4 mb-3">
+            <div class="flex justify-between items-start gap-4 mb-5">
               <div>
-                <h4 class="text-xl font-black font-display">Celestial Echoes</h4>
-                <div class="text-xs text-white/50 mt-1">Creator's favorite</div>
+                <h4 class="text-xl font-black font-display">Nebula X</h4>
+                <div class="text-xs text-white/50 mt-1">Deep house starship voyage</div>
               </div>
-              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">61K Views</span>
+              <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">108K Views</span>
             </div>
-            <div class="text-xs text-white/45 mb-4">Creator's Favorite</div>
-            <a href="https://vt.tiktok.com/ZSBGxk7ag/" target="_blank" rel="noopener noreferrer"
+            <a href="https://youtu.be/ZtEhub_jrIk" target="_blank" rel="noopener noreferrer"
                class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
               Watch Now <i class="fas fa-play ml-2"></i>
             </a>
