--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
               </div>
               <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">155K Views</span>
             </div>
-            <a href="https://youtu.be/cNbzJaF-pb8" target="_blank" rel="noopener noreferrer"
+            <a href="https://www.tiktok.com/@cosmictease/video/7556171092981812488" target="_blank" rel="noopener noreferrer"
                class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
               Watch Now <i class="fas fa-play ml-2"></i>
             </a>
@@ -480,7 +480,7 @@
               </div>
               <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">136K Views</span>
             </div>
-            <a href="https://youtu.be/EHztG5vbR3A" target="_blank" rel="noopener noreferrer"
+            <a href="https://www.tiktok.com/@cosmictease/video/7554985767697763592" target="_blank" rel="noopener noreferrer"
                class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
               Watch Now <i class="fas fa-play ml-2"></i>
             </a>
@@ -490,11 +490,11 @@
             <div class="flex justify-between items-start gap-4 mb-5">
               <div>
                 <h4 class="text-xl font-black font-display">Climb Up</h4>
-                <div class="text-xs text-white/50 mt-1">Physical endurance + ethereal rebirth</div>
+                <div class="text-xs text-white/50 mt-1">Physical endurance anthem</div>
               </div>
               <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">121K Views</span>
             </div>
-            <a href="https://youtu.be/4cVYiy0EVv4" target="_blank" rel="noopener noreferrer"
+            <a href="https://www.tiktok.com/@cosmictease/video/7585206799054294292" target="_blank" rel="noopener noreferrer"
                class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
               Watch Now <i class="fas fa-play ml-2"></i>
             </a>
@@ -508,7 +508,7 @@
               </div>
               <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">110K Views</span>
             </div>
-            <a href="https://youtu.be/Qd8wDaQ5lHg" target="_blank" rel="noopener noreferrer"
+            <a href="https://www.tiktok.com/@cosmictease/video/7562766228486425863" target="_blank" rel="noopener noreferrer"
                class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
               Watch Now <i class="fas fa-play ml-2"></i>
             </a>
@@ -522,7 +522,7 @@
               </div>
               <span class="bg-purple-500/15 text-purple-200 px-3 py-1 rounded-full text-xs font-black border border-purple-400/20">108K Views</span>
             </div>
-            <a href="https://youtu.be/ZtEhub_jrIk" target="_blank" rel="noopener noreferrer"
+            <a href="https://www.tiktok.com/@cosmictease/video/7600808131265940757" target="_blank" rel="noopener noreferrer"
                class="block w-full py-3 text-center rounded-xl border border-purple-500/25 hover:bg-purple-500/15 transition-all text-sm font-black text-purple-200">
               Watch Now <i class="fas fa-play ml-2"></i>
             </a>
