--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GLS4TXV26K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-GLS4TXV26K');
+  </script>
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta name="description" content="Violet Media — The Cosmic Empire. Cinematic storytelling, music worlds, and AI-powered creation engineered for the new era." />
   <meta name="theme-color" content="#050214" />
@@ -96,7 +104,7 @@
     #three-host{ position:fixed; inset:0; z-index:-2; pointer-events:none; }
     canvas{ display:block; }
 
-    /* ── HERO VIDEO BACKGROUND ── */
+    /* HERO VIDEO BACKGROUND */
     #hero-video-bg {
       position: absolute;
       inset: 0;
@@ -107,7 +115,7 @@
       position: absolute;
       top: 50%;
       left: 50%;
-      width: 177.78vh; /* 16:9 ratio */
+      width: 177.78vh;
       height: 100vh;
       min-width: 100%;
       min-height: 56.25vw;
@@ -191,7 +199,6 @@
     }
     #toTop.show{ opacity:1; transform: translateY(0); pointer-events:auto; }
 
-    /* ── SERVICE CARDS ── */
     .service-card {
       position: relative;
       overflow: hidden;
@@ -207,7 +214,6 @@
     }
     .service-card:hover::after { opacity: 1; }
 
-    /* ── SPOTIFY EMBED ── */
     .spotify-embed {
       border-radius: 16px;
       overflow: hidden;
@@ -295,12 +301,9 @@
   </div>
 
   <main id="main">
-    <!-- ═══════════════════════════════════════════════════════════
-         HERO — with looping video background
-    ═══════════════════════════════════════════════════════════ -->
+    <!-- HERO -->
     <section id="top" class="min-h-screen flex items-center justify-center text-center relative pt-24 overflow-hidden">
 
-      <!-- VIDEO BACKGROUND -->
       <div id="hero-video-bg" aria-hidden="true">
         <iframe
           src="https://www.youtube.com/embed/c7NcEgxAGq0?autoplay=1&mute=1&loop=1&controls=0&showinfo=0&rel=0&modestbranding=1&playsinline=1&enablejsapi=1&playlist=c7NcEgxAGq0"
@@ -339,7 +342,7 @@
           Where vision meets vibration. Where art, AI, and human spirit coalesce to create content that lasts.
         </p>
 
-        <!-- ── REAL TIKTOK STUDIO METRICS ── -->
+        <!-- REAL TIKTOK STUDIO METRICS -->
         <div class="grid grid-cols-2 md:grid-cols-5 gap-4 max-w-5xl mx-auto mb-10 reveal" style="transition-delay: 280ms;">
           <div class="glass-card p-6 rounded-2xl text-left">
             <div class="flex items-center justify-between mb-3">
@@ -396,7 +399,6 @@
           </a>
         </div>
 
-        <!-- FYP Badge -->
         <div class="mt-5 reveal" style="transition-delay: 420ms;">
           <div class="inline-flex items-center gap-2 glass-card rounded-full px-5 py-2 text-xs font-bold text-white/75">
             <span class="w-2 h-2 rounded-full bg-green-400" style="box-shadow: 0 0 10px rgba(74,222,128,0.7);"></span>
@@ -428,7 +430,6 @@
     <section id="cosmic-tease" class="py-28 relative">
       <div class="container mx-auto px-6">
         <div class="text-center mb-16 reveal">
-          <!-- ── UPDATED: 14M+ ── -->
           <h2 class="text-4xl md:text-5xl font-display font-black mb-4 cosmic-text">COSMIC TEASE</h2>
           <p class="text-lg text-white/60">The Entertainment Empire • 14M Views • 718K Likes • 10K Shares</p>
           <div class="flex justify-center items-center gap-6 mt-6">
@@ -550,7 +551,7 @@
             <i class="fab fa-spotify text-3xl mb-3 text-green-500 group-hover:scale-110 transition-transform"></i>
             <span class="text-sm font-bold">Spotify</span>
           </a>
-          <a href="https://music.youtube.com/channel/UCKZerj7cXfr3sODhKtjPg6A" target="_blank" rel="noopener noreferrer"
+          <a href="https://music.youtube.com/channel/UCKZerj7cXfr3sODhKtjPg6A?si=122tjGJ_irhPZn46" target="_blank" rel="noopener noreferrer"
              class="glass-card rounded-2xl p-6 flex flex-col items-center justify-center hover:bg-red-500/10 transition-colors group">
             <i class="fab fa-youtube text-3xl mb-3 text-red-500 group-hover:scale-110 transition-transform"></i>
             <span class="text-sm font-bold">YT Music</span>
@@ -576,7 +577,7 @@
           </a>
         </div>
 
-        <!-- ── SPOTIFY EMBED ── -->
+        <!-- SPOTIFY EMBED -->
         <div class="max-w-5xl mx-auto mb-10 reveal">
           <div class="spotify-embed">
             <iframe
@@ -614,9 +615,7 @@
       </div>
     </section>
 
-    <!-- ═══════════════════════════════════════════════════════════
-         SERVICES — NEW SECTION
-    ═══════════════════════════════════════════════════════════ -->
+    <!-- SERVICES -->
     <section id="services" class="py-28 relative">
       <div class="absolute inset-0 -z-10" aria-hidden="true"
            style="background: radial-gradient(800px 500px at 80% 30%, rgba(138,43,226,0.09), transparent 60%),
@@ -636,9 +635,7 @@
               <i class="fa-solid fa-clapperboard text-xl text-purple-300"></i>
             </div>
             <h3 class="text-xl font-black font-display mb-3">Branded Content</h3>
-            <p class="text-white/60 text-sm leading-relaxed mb-4">
-              Cinematic AI-powered content campaigns for brands that want to move people — not just sell to them. TikTok, YouTube, Instagram.
-            </p>
+            <p class="text-white/60 text-sm leading-relaxed mb-4">Cinematic AI-powered content campaigns for brands that want to move people — not just sell to them. TikTok, YouTube, Instagram.</p>
             <div class="text-xs text-purple-300/80 font-bold tracking-wider uppercase">Brand Campaigns · Reels · Shorts</div>
           </div>
 
@@ -648,9 +645,7 @@
               <i class="fa-solid fa-music text-xl text-pink-300"></i>
             </div>
             <h3 class="text-xl font-black font-display mb-3">Music Production</h3>
-            <p class="text-white/60 text-sm leading-relaxed mb-4">
-              Deep House, Ethereal Cosmic House, and AI-generated pop. Original tracks for sync licensing, content scoring, and commercial release.
-            </p>
+            <p class="text-white/60 text-sm leading-relaxed mb-4">Deep House, Ethereal Cosmic House, and AI-generated pop. Original tracks for sync licensing, content scoring, and commercial release.</p>
             <div class="text-xs text-pink-300/80 font-bold tracking-wider uppercase">Original Tracks · Sync Licensing · Scoring</div>
           </div>
 
@@ -660,9 +655,7 @@
               <i class="fa-solid fa-film text-xl text-yellow-300"></i>
             </div>
             <h3 class="text-xl font-black font-display mb-3">Music Video Production</h3>
-            <p class="text-white/60 text-sm leading-relaxed mb-4">
-              Full cinematic music video production using AI-generated imagery, character universes, and hyper-realistic visual storytelling.
-            </p>
+            <p class="text-white/60 text-sm leading-relaxed mb-4">Full cinematic music video production using AI-generated imagery, character universes, and hyper-realistic visual storytelling.</p>
             <div class="text-xs text-yellow-300/80 font-bold tracking-wider uppercase">Concept · Visuals · Full Video</div>
           </div>
 
@@ -672,9 +665,7 @@
               <i class="fa-solid fa-microphone text-xl text-blue-300"></i>
             </div>
             <h3 class="text-xl font-black font-display mb-3">Voiceover & Avatar</h3>
-            <p class="text-white/60 text-sm leading-relaxed mb-4">
-              ElevenLabs Pro voice synthesis and InfiniteTalk lipsync production for podcasts, explainers, ads, and documentary narration.
-            </p>
+            <p class="text-white/60 text-sm leading-relaxed mb-4">ElevenLabs Pro voice synthesis and InfiniteTalk lipsync production for podcasts, explainers, ads, and documentary narration.</p>
             <div class="text-xs text-blue-300/80 font-bold tracking-wider uppercase">ElevenLabs · InfiniteTalk · Character Voice</div>
           </div>
 
@@ -684,9 +675,7 @@
               <i class="fa-solid fa-rocket text-xl text-purple-200"></i>
             </div>
             <h3 class="text-xl font-black font-display mb-3">Creator Consultation</h3>
-            <p class="text-white/60 text-sm leading-relaxed mb-4">
-              Strategic guidance for creators wanting to build an AI-powered content system. Stack selection, workflow design, brand identity.
-            </p>
+            <p class="text-white/60 text-sm leading-relaxed mb-4">Strategic guidance for creators wanting to build an AI-powered content system. Stack selection, workflow design, brand identity.</p>
             <div class="text-xs text-purple-200/80 font-bold tracking-wider uppercase">Strategy · AI Stack · Brand Build</div>
           </div>
 
@@ -696,9 +685,7 @@
               <i class="fa-solid fa-handshake text-xl text-cyan-300"></i>
             </div>
             <h3 class="text-xl font-black font-display mb-3">Brand Collaborations</h3>
-            <p class="text-white/60 text-sm leading-relaxed mb-4">
-              Partner with Violet Media and Cosmic Tease for sponsored content, product integrations, and co-created campaigns reaching 14M+ views.
-            </p>
+            <p class="text-white/60 text-sm leading-relaxed mb-4">Partner with Violet Media and Cosmic Tease for sponsored content, product integrations, and co-created campaigns reaching 14M+ views.</p>
             <div class="text-xs text-cyan-300/80 font-bold tracking-wider uppercase">Sponsorship · Co-Creation · Reach</div>
           </div>
 
@@ -712,7 +699,7 @@
       </div>
     </section>
 
-    <!-- AI TECH — UPDATED WITH REAL STACK -->
+    <!-- AI TECH -->
     <section id="ai-tech" class="py-28 relative">
       <div class="container mx-auto px-6">
         <div class="text-center mb-16 reveal">
@@ -721,7 +708,6 @@
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 max-w-6xl mx-auto">
-
           <div class="glass-card rounded-2xl p-8 text-center reveal">
             <i class="fas fa-music text-4xl text-purple-300 mb-4"></i>
             <h3 class="text-xl font-black mb-2 font-display">Suno AI 5.0</h3>
@@ -763,7 +749,6 @@
             <div class="text-xs text-orange-300/70 font-bold tracking-widest uppercase mb-3">Creative Intelligence</div>
             <p class="text-white/60 text-sm leading-relaxed">The strategic and creative AI brain behind Violet Media's content architecture, prompt engineering, and production workflows.</p>
           </div>
-
         </div>
 
         <div class="glass-card rounded-3xl p-10 mt-12 max-w-5xl mx-auto reveal">
@@ -931,15 +916,14 @@
       </div>
     </section>
 
-    <!-- FOOTER — UPDATED © 2026 -->
+    <!-- FOOTER -->
     <footer class="py-14 text-center border-t border-white/5 bg-cosmic-900/60">
       <div class="container mx-auto px-6">
-        <!-- Logo Lockup -->
         <div class="flex justify-center mb-8">
           <img src="vm-logo-horizontal-footer.jpg" alt="Violet Media - AI-Powered Cosmic Visuals" class="w-full max-w-3xl rounded-2xl" style="max-width: 768px; width: 100%; height: auto;" />
         </div>
         
-        <p class="text-white/45 mb-3">© 2026 Violet Media. All rights reserved.</p>
+        <p class="text-white/45 mb-3">&copy; 2026 Violet Media. All rights reserved.</p>
         <p class="text-xl md:text-2xl font-black cosmic-text font-display">
           Quality is for the ages. This is Violet Media.
         </p>
